Fix Sonar findings